--- a/src/main/metadata/pages/AddressDisplayInlineEdit.page
+++ b/src/main/metadata/pages/AddressDisplayInlineEdit.page
@@ -38,6 +38,7 @@
                         <!--out put field to display address Type  --> 
                         <apex:outputField value="{!row.Address_Type__c}" style="width:7%; white-space:none;">
                         </apex:outputField>
+                        
                     </apex:column>
                     
                     <apex:column headerValue="{!$ObjectType.Address__c.fields.ZipCode__c.Label}">
@@ -123,13 +124,37 @@
             <apex:pageBlock id="hiddenBlock" rendered="false"></apex:pageBlock>
             <apex:pageBlock rendered="{!ShowpageBlockFlag}">                 
                 <apex:pageBlockSection title="Address Information" columns="3">
-                    <!--input fields for new address -->
-                    <apex:inputField value="{!addressobj.Address_Type__c}"/>
+                    <!--input fields for new address 
+                    <apex:inputField value="{!addressobj.Address_Type__c}"/>-->
+                      
+                    <apex:pageBlockSectionItem >
+                        <!-- <apex:inputField value="{!addressobj.Address_Type__c}"/> -->
+                        <apex:outputLabel value="{!$ObjectType.Address__c.fields.Address_Type__c.Label}"/>
+                        <apex:selectList value="{!addresspicklist}" multiselect="false" size="1" style="width:43%; white-space:none;">
+                            <apex:selectOptions value="{!AddressOptions}"/>
+                        </apex:selectList>
+                    </apex:pageBlockSectionItem>
+                    
                     <apex:inputField value="{!addressobj.ZipCode__c}"/>
-                    <apex:inputField value="{!addressobj.Province__c}"/>
+                    <apex:pageBlockSectionItem >
+                        <!-- <apex:inputField value="{!addressobj.Province__c}"/> -->
+                        <apex:outputLabel value="{!$ObjectType.Address__c.fields.Province__c.Label}"/>
+                        <apex:selectList value="{!provincepicklist}" multiselect="false" size="1" style="width:80%; white-space:none;">
+                            <apex:selectOptions value="{!ProvinceOptions}"/>
+                        </apex:selectList>
+                    </apex:pageBlockSectionItem>
+                          
                     <apex:inputField value="{!addressobj.City__c}"/>
                     <apex:inputField value="{!addressobj.District__c}"/>
-                    <apex:inputField value="{!addressobj.Block__c}"/>
+                    <apex:pageBlockSectionItem rendered="{!IF(market == 'KR', true, false)}">
+                        <apex:outputLabel value="{!$ObjectType.Address__c.fields.HouseNumber__c.Label}"/>
+                        <apex:inputField value="{!AddressObj.HouseNumber__c}"/>           
+                    </apex:pageBlockSectionItem>
+                    <apex:pageBlockSectionItem rendered="{!IF(market != 'KR', true, false)}">
+                        <apex:outputLabel value="{!$ObjectType.Address__c.fields.Block__c.Label}"/>
+                        <apex:inputField value="{!AddressObj.Block__c}"/>           
+                    </apex:pageBlockSectionItem>
+                    <!-- <apex:inputField value="{!addressobj.Block__c}"/> -->
                     <apex:inputField value="{!addressobj.Address_Line_1__c}"/>
                     <apex:inputField value="{!addressobj.Address_Line_2__c}"/>
                     <apex:inputField value="{!addressobj.Company_Name__c}"/>
