--- a/src/main/metadata/pages/AddressSearchValidation.page
+++ b/src/main/metadata/pages/AddressSearchValidation.page
@@ -88,8 +88,8 @@
                 
        <!--  KOREA MARKET Person Account - Start -->
                 <apex:pageBlockSection id="PersonAccBlockKR" title="{!$Label.Person_Account_Information}" rendered="{!If(AND(RecordType == 'Person Account',ISPICKVAL($User.Market__c,'KR') ),true,false)}">
-                    <apex:inputField value="{!objPersonAccount.Salutation__c}" />
-                    <apex:outputtext />          
+                   <!-- <apex:inputField value="{!objPersonAccount.Salutation__c}" />
+                    <apex:outputtext />   -->       
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.LastName.Label}"/>
                         <apex:outputPanel styleClass="requiredInput" layout="block">
@@ -98,7 +98,7 @@
                             <apex:inputText value="{!objPersonAccount.LastName}" />
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>               
-                    <apex:pageBlockSectionItem >                 
+                   <!-- <apex:pageBlockSectionItem >                 
                         <apex:outputLabel value="{!$ObjectType.Account.fields.FirstName.Label}"/>
                         <apex:inputText value="{!objPersonAccount.FirstName}" />   
                     </apex:pageBlockSectionItem>                                                
@@ -111,9 +111,19 @@
                             <apex:inputText value="{!homePhoneAreaCodePart2}" id="homePhoneAreaCodePart2" onkeyup="validateCode(this.id)" style="width:60px"/>
                             <apex:inputText value="{!homePhoneAreaCodePart3}" id="homePhoneAreaCodePart3" style="width:60px"/>
                         </apex:outputPanel>
-                    </apex:pageBlockSectionItem>                   
-                    <apex:inputField value="{!objPersonAccount.Mobile__c}" />                  
-                    <apex:pageBlockSectionItem >
+                    </apex:pageBlockSectionItem>  -->                  
+                   <!--<apex:inputField value="{!objPersonAccount.Mobile__c}" /> -->   
+                   <apex:pageBlockSectionItem >
+                        <apex:outputLabel value="{!$ObjectType.Account.fields.Mobile__c.Label}" />
+                        <apex:outputPanel >
+                            <apex:selectList value="{!mobileAreaCode}" size="1" style="width:80px">
+                                <apex:selectOptions value="{!MobileAreacodeItems}"/>
+                            </apex:selectList>                       
+                            <apex:inputText value="{!mobileAreaCodePart2}" id="mobileAreaCodePart2" onkeyup="validateCode(this.id)" style="width:60px"/>
+                            <apex:inputText value="{!mobileAreaCodePart3}" id="mobileAreaCodePart3" style="width:60px"/>
+                        </apex:outputPanel>
+                    </apex:pageBlockSectionItem>          
+                  <!--  <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Work_Phone__c.Label}" />
                         <apex:outputPanel >
                             <apex:selectList value="{!workPhoneAreaCode}" size="1" style="width:80px">
@@ -122,16 +132,16 @@
                             <apex:inputText value="{!workPhoneAreaCodePart2}" id="workPhoneAreaCodePart2" style="width:60px"/>
                             <apex:inputText value="{!workPhoneAreaCodePart3}" id="workPhoneAreaCodePart3" style="width:60px"/>
                         </apex:outputPanel>                  
-                    </apex:pageBlockSectionItem> 
+                    </apex:pageBlockSectionItem> -->
                    
-                    <apex:inputField value="{!objPersonAccount.Email__c}" />                    
-                    <apex:inputField value="{!objPersonAccount.PersonBirthdate}"/>  
+             <!--       <apex:inputField value="{!objPersonAccount.Email__c}" />                    
+                    <apex:inputField value="{!objPersonAccount.PersonBirthdate}"/>  -->
                     <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>
                 </apex:pageBlockSection>
                
         <!--  KOREA MARKET Person Account - End -->
        
-         <!--  KOREA MARKET Company Account - End -->
+         <!--  KOREA MARKET Company Account - Start -->
                 <apex:pageBlockSection id="companyBlockKR" title="{!$Label.Company_Account_Information}" rendered="{!If( AND(RecordType == 'Company',ISPICKVAL($User.Market__c,'KR')) ,true,false)}" >
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Name.Label}"/>
@@ -141,8 +151,8 @@
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>
                   
-                    <apex:inputField value="{!objAccount.Company_Name__c}" />              
-                    <apex:inputField value="{!objAccount.Company_Legal_Form__c}" />              
+                <!--    <apex:inputField value="{!objAccount.Company_Name__c}" />              
+                    <apex:inputField value="{!objAccount.Company_Legal_Form__c}" />    -->          
            
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Individual_Home_Phone__c.Label}" />
@@ -154,8 +164,16 @@
                             <apex:inputText value="{!homePhoneAreaCodePart3}" id="homePhoneAreaCodePart3" style="width:60px"/>
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>                 
-                    <apex:inputField value="{!objAccount.Mobile__c}" />
-                  <!--  <apex:inputField value="{!objAccount.Work_Phone__c}" /> -->
+                    <apex:pageBlockSectionItem >
+                        <apex:outputLabel value="{!$ObjectType.Account.fields.Mobile__c.Label}" />
+                        <apex:outputPanel >
+                            <apex:selectList value="{!mobileAreaCode}" size="1" style="width:80px">
+                                <apex:selectOptions value="{!MobileAreacodeItems}"/>
+                            </apex:selectList>                       
+                            <apex:inputText value="{!mobileAreaCodePart2}" id="mobileAreaCodePart2" onkeyup="validateCode(this.id)" style="width:60px"/>
+                            <apex:inputText value="{!mobileAreaCodePart3}" id="mobileAreaCodePart3" style="width:60px"/>
+                        </apex:outputPanel>
+                    </apex:pageBlockSectionItem>  
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Work_Phone__c.Label}" />
                        <apex:outputPanel >
@@ -167,8 +185,9 @@
                         </apex:outputPanel>                  
                     </apex:pageBlockSectionItem>                  
                                   
-                    <apex:inputField value="{!objAccount.Email__c}" />           
-                    <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>
+                 <!--   <apex:inputField value="{!objAccount.Email__c}" />           
+                    <apex:inputField value="{!objPersonAccount.Data_Source__c}"/> -->
+                   <apex:inputField value="{!objAccount.Fax}" /> 
                 </apex:pageBlockSection>       
                 
          <!--  KOREA MARKET Company Account - End -->
@@ -223,28 +242,20 @@
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Address_Line_1__c.Label}"/>
                         <apex:inputField value="{!AddressObj.Address_Line_1__c}"/>
-                       
-                        
                     </apex:pageBlockSectionItem>
                    
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Address_Line_2__c.Label}"/>
-                        <apex:inputField value="{!AddressObj.Address_Line_2__c}"/>
-                       
-                        
+                        <apex:inputField value="{!AddressObj.Address_Line_2__c}"/> 
                     </apex:pageBlockSectionItem>
                    
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Temp_ZipCode__c.Label}"/>
-                        <apex:inputField value="{!AddressObj.Temp_ZipCode__c}"/>
-                       
-                        
+                        <apex:inputField value="{!AddressObj.Temp_ZipCode__c}"/>  
                     </apex:pageBlockSectionItem>
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Temp_Address__c.Label}"/>
-                        <apex:inputField value="{!AddressObj.Temp_Address__c}"/>
-                        
-                        
+                        <apex:inputField value="{!AddressObj.Temp_Address__c}"/>                        
                     </apex:pageBlockSectionItem>
                    
                 </apex:pageBlockSection>
@@ -255,44 +266,26 @@
                     <apex:outputPanel id="redirectPanel">                  
                         <apex:outputText rendered="{!refreshPage}">
                             <script type="text/javascript">
-                           
                             function testGetFocusedSubtabId()
                             {
                                 sforce.console.getFocusedPrimaryTabId(showTabId);
-                               
                             }
-                           
                             var showTabId = function showTabId(result) {
                                 // Display the tab ID
-                               
                                 var subtabId = result.id;
-                               
-                                
                                 sforce.console.refreshPrimaryTabById(subtabId, true);
                                  sforce.console.focusPrimaryTabById(subtabId);
-                               
- 
                             };
-                            
-                            
                             testGetFocusedSubtabId();
-                           
-                                                        
-                            //Korea related functions - Start
- 
-                            //Korea related functions - End
-                           
-                            </script>                    
-                        </apex:outputText>
-                    </apex:outputPanel>
-                    <apex:commandButton action="{!cancel}"  value="{!$Label.Cancel_Button}"/>
-                   
+                          </script>                    
+                       </apex:outputText>
+                   </apex:outputPanel>
+             <apex:commandButton action="{!cancel}"  value="{!$Label.Cancel_Button}"/>                   
             <apex:actionStatus id="actStatusId" style="align:center;">
                 <apex:facet name="start" >
                   <img src="/img/loading.gif" />                   
                 </apex:facet>
-            </apex:actionStatus> 
-                              
+            </apex:actionStatus>                               
                 </apex:pageBlockButtons>
             </apex:pageBlock>
         </div>
