--- a/src/main/metadata/pages/AddressSearchValidation.page
+++ b/src/main/metadata/pages/AddressSearchValidation.page
@@ -98,7 +98,7 @@
                             <apex:inputText value="{!objPersonAccount.LastName}" />
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>               
-                   <!-- <apex:pageBlockSectionItem >                 
+                    <apex:pageBlockSectionItem >                 
                         <apex:outputLabel value="{!$ObjectType.Account.fields.FirstName.Label}"/>
                         <apex:inputText value="{!objPersonAccount.FirstName}" />   
                     </apex:pageBlockSectionItem>                                                
@@ -111,8 +111,7 @@
                             <apex:inputText value="{!homePhoneAreaCodePart2}" id="homePhoneAreaCodePart2" onkeyup="validateCode(this.id)" style="width:60px"/>
                             <apex:inputText value="{!homePhoneAreaCodePart3}" id="homePhoneAreaCodePart3" style="width:60px"/>
                         </apex:outputPanel>
-                    </apex:pageBlockSectionItem>  -->                  
-                   <!--<apex:inputField value="{!objPersonAccount.Mobile__c}" /> -->   
+                    </apex:pageBlockSectionItem>   
                    <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Mobile__c.Label}" />
                         <apex:outputPanel >
@@ -123,7 +122,7 @@
                             <apex:inputText value="{!mobileAreaCodePart3}" id="mobileAreaCodePart3" style="width:60px"/>
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>          
-                  <!--  <apex:pageBlockSectionItem >
+                 <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Work_Phone__c.Label}" />
                         <apex:outputPanel >
                             <apex:selectList value="{!workPhoneAreaCode}" size="1" style="width:80px">
@@ -132,16 +131,16 @@
                             <apex:inputText value="{!workPhoneAreaCodePart2}" id="workPhoneAreaCodePart2" style="width:60px"/>
                             <apex:inputText value="{!workPhoneAreaCodePart3}" id="workPhoneAreaCodePart3" style="width:60px"/>
                         </apex:outputPanel>                  
-                    </apex:pageBlockSectionItem> -->
+                    </apex:pageBlockSectionItem> 
                    
-             <!--       <apex:inputField value="{!objPersonAccount.Email__c}" />                    
-                    <apex:inputField value="{!objPersonAccount.PersonBirthdate}"/>  -->
-                    <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>
-                </apex:pageBlockSection>
+                  <apex:inputField value="{!objPersonAccount.Email__c}" />                    
+                  <apex:inputField value="{!objPersonAccount.PersonBirthdate}"/> 
+                  <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>
+               </apex:pageBlockSection>
                
         <!--  KOREA MARKET Person Account - End -->
        
-         <!--  KOREA MARKET Company Account - Start -->
+         <!--  KOREA MARKET Company Account - End -->
                 <apex:pageBlockSection id="companyBlockKR" title="{!$Label.Company_Account_Information}" rendered="{!If( AND(RecordType == 'Company',ISPICKVAL($User.Market__c,'KR')) ,true,false)}" >
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Name.Label}"/>
@@ -151,9 +150,8 @@
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>
                   
-                <!--    <apex:inputField value="{!objAccount.Company_Name__c}" />              
-                    <apex:inputField value="{!objAccount.Company_Legal_Form__c}" />    -->          
-           
+                    <apex:inputField value="{!objAccount.Company_Name__c}" />              
+                    <apex:inputField value="{!objAccount.Company_Legal_Form__c}" />  
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.Individual_Home_Phone__c.Label}" />
                         <apex:outputPanel >
@@ -185,8 +183,8 @@
                         </apex:outputPanel>                  
                     </apex:pageBlockSectionItem>                  
                                   
-                 <!--   <apex:inputField value="{!objAccount.Email__c}" />           
-                    <apex:inputField value="{!objPersonAccount.Data_Source__c}"/> -->
+                   <apex:inputField value="{!objAccount.Email__c}" />           
+                   <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>
                    <apex:inputField value="{!objAccount.Fax}" /> 
                 </apex:pageBlockSection>       
                 
