--- a/src/main/metadata/pages/VehiclePicker.page
+++ b/src/main/metadata/pages/VehiclePicker.page
@@ -1,5 +1,6 @@
 <apex:page docType="html-5.0" showHeader="true" sidebar="false" standardStylesheets="true" standardController="Lead__c" extensions="VehiclePickerController">
 <apex:form >
+<apex:pageMessages escape="false"  ></apex:pageMessages>
     <apex:includeScript value="{!$Resource.jQuery}" />
     <apex:includeScript value="{!$Resource.Angular}"/>
     <apex:includeScript value="{!$Resource.Bootstrap}"/>
@@ -396,7 +397,7 @@
                 $scope.vehicleDetailPurchased = false;
                 $scope.PurchasedLookup = false;
             }else if (angular.equals(vehicle_type, 'Purchased')){
-                $scope.status_type = 'Competitor';
+                $scope.status_type = 'Own Sellable';
                 $scope.vehicleDetailPurchased = true;
                 $scope.PurchasedLookup = false;
                 
@@ -675,7 +676,7 @@
         &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'Edit'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses)"  class="btn" value="{!$label.New_Button}"/>
         &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'New' || interestedRecType != 'Vehicle Product'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses)" class="btn" value="{!$Label.Edit}"/>
         &nbsp;<input type="button" ng-click="clearVehicle('Interested Vehicle')" class="btn" value="{!$label.Clear_Button}"/> 
-        &nbsp;<input type="button" ng-disabled="{{lead_Type != 'Used Car'|| interestedVehicleDetails != ''}}" ng-click="showList('Interested Vehicle')" class="btn" value="{!$label.Lookup_Button}"/>
+        &nbsp;<!--<input type="button" ng-disabled="{{lead_Type != 'Used Car'|| interestedVehicleDetails != ''}}" ng-click="showList('Interested Vehicle')" class="btn" value="{!$label.Lookup_Button}"/>-->
         <!----------------- DISPLAY INTERESTED VEHICLE DETAILS ---------------->
         <div ng-if="vehicleDetail" style="background-color:#efefef;width:500px"> 
             <br/>
