--- a/src/main/metadata/pages/AddressDisplayInlineEdit.page
+++ b/src/main/metadata/pages/AddressDisplayInlineEdit.page
@@ -61,9 +61,8 @@
                         </apex:outputText>
                     </apex:column>
                     
-                    <apex:column headerValue="{!$ObjectType.Address__c.fields.Block__c.Label}" >
-                        <apex:outputText value="{!row.Block__c}" style="width:10%; white-space:nowrap;">
-                        </apex:outputText>
+                    <apex:column headerValue="{!if(Market=='KR',$ObjectType.Address__c.fields.HouseNumber__c.Label,$ObjectType.Address__c.fields.Block__c.Label)}" >                                               
+                        <apex:outputText value="{!if(Market=='KR',row.HouseNumber__c,row.Block__c)}"/>          
                     </apex:column>
                     
                     <apex:column headerValue="{!$ObjectType.Address__c.fields.Address_Line_1__c.Label}" >
@@ -75,22 +74,20 @@
                         <apex:outputText value="{!row.Address_Line_2__c}" style="width:10%; white-space:none;">
                         </apex:outputText>
                     </apex:column>
-                    
-                    <apex:column headerValue="{!$ObjectType.Address__c.fields.Company_Name__c.Label}">
+                    <apex:column headerValue="{!$ObjectType.Address__c.fields.Company_Name__c.Label}"> 
                         <apex:outputText value="{!row.Company_Name__c}" style="width:10%; white-space:none;">
                         </apex:outputText>
-                    </apex:column>
-                    
+                    </apex:column>                    
+                  
                     <apex:column headerValue="{!$ObjectType.Address__c.fields.Company_Name_Native__c.Label}">
-                        <apex:outputText value="{!row.Company_Name_Native__c}" style="width:10%; white-space:none;">
-                        </apex:outputText>
+                            <apex:outputText value="{!row.Company_Name_Native__c}" style="width:10%; white-space:none;">
+                        </apex:outputText>                        
                     </apex:column>
-                    
-                    <apex:column headerValue="{!$ObjectType.Address__c.fields.TitleOfHonor__c.Label}">
+                                   
+                    <apex:column headerValue="{!$ObjectType.Address__c.fields.TitleOfHonor__c.Label}"> 
                         <apex:outputField value="{!row.TitleOfHonor__c}" style="width:10%; white-space:none;">
-                        </apex:outputField>
-                    </apex:column>
-                    
+                        </apex:outputField>                         
+                    </apex:column>                   
                     
                     <apex:column headerValue="{!$ObjectType.Address__c.fields.Status__c.Label}">
                         <apex:outputField value="{!row.Status__c}" style="width:10%; white-space:none;">
@@ -137,11 +134,13 @@
                     
                     <apex:inputField value="{!addressobj.ZipCode__c}"/>
                     <apex:pageBlockSectionItem >
-                        <!-- <apex:inputField value="{!addressobj.Province__c}"/> -->
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Province__c.Label}"/>
+                         <apex:inputField value="{!addressobj.Province__c}" style="width:80%; white-space:none;" /> 
+                       <!-- <apex:outputLabel value="{!$ObjectType.Address__c.fields.Province__c.Label}"/>
                         <apex:selectList value="{!provincepicklist}" multiselect="false" size="1" style="width:80%; white-space:none;">
                             <apex:selectOptions value="{!ProvinceOptions}"/>
                         </apex:selectList>
+                        -->
                     </apex:pageBlockSectionItem>
                           
                     <apex:inputField value="{!addressobj.City__c}"/>
@@ -158,8 +157,10 @@
                     <apex:inputField value="{!addressobj.Address_Line_1__c}"/>
                     <apex:inputField value="{!addressobj.Address_Line_2__c}"/>
                     <apex:inputField value="{!addressobj.Company_Name__c}"/>
-                    <apex:inputField value="{!addressobj.Company_Name_Native__c}"/>
-                    <apex:inputField value="{!addressobj.TitleOfHonor__c}"/>  
+                    <apex:outputPanel rendered="{!if(Market=='KR',False,True)}">
+                        <apex:inputField value="{!addressobj.Company_Name_Native__c}"/>
+                        <apex:inputField value="{!addressobj.TitleOfHonor__c}"/> 
+                    </apex:outputPanel> 
                     <apex:inputField value="{!addressobj.Status__c}"/>
                     <apex:inputField value="{!addressobj.Preferred__c}"/>
                     <apex:inputField value="{!addressobj.Temp_ZipCode__c}"/>
