--- a/src/main/metadata/pages/GeneratePDF.page
+++ b/src/main/metadata/pages/GeneratePDF.page
@@ -199,6 +199,7 @@
              <td class="TopTd" align="left" width="80%" colspan="3" style="border-bottom-style: hidden;border-top-width:3px;border-right-width:3px;">{!Case.Case_Dealer__r.Company_Name__c}&nbsp;{!Case.Case_Dealer__r.Name}
               <apex:outputlabel rendered="{!If(OR(Case.Case_Dealer__r.Company_Name__c!=Null,Case.Case_Dealer__r.Name!=Null),true,false)}">{!$Label.Onchu}</apex:outputlabel></td>
          </tr>
+         
          <tr><td class="TopTdLabel" align="left" width="20%" style="border-right-style: hidden;border-left-width:3px;">{!$Label.PhoneSales}&nbsp;</td>
              <td class="TopTd" align="left" width="30%" style="border-right-style: hidden;">{!Case.Case_Dealer__r.Phone}&nbsp;</td>
              <td class="TopTdLabel" align="left" width="20%" style="border-right-style: hidden;">{!$Label.FAXSales}&nbsp;</td>
@@ -226,7 +227,7 @@
              <td class="TdLabel" align="left" width="20%" style="border-top-style: hidden;border-right-style: hidden;border-bottom-width:3px;">{!$Label.CaseCategory}</td>
              <td align="left" width="30%" style="border-top-style: hidden;border-right-width:3px;border-bottom-width:3px;"><apex:outputField value="{!Case.Case_Class__c}"></apex:outputField></td>
           </tr> 
-           <tr>
+          <tr>
              <td class="TdLabel" align="left" width="20%" style="border-top-style: hidden;border-right-style: hidden;border-left-width:3px;">{!$Label.Kana}</td>
              <td align="left" width="30%" style="border-top-style: hidden;border-right-style: hidden;">
                <apex:outputlabel rendered="{!If(Case.Account.RecordType.Name=='Person Account',true,false)}">{!Case.Account.LastName_Native_1__c} &nbsp; {!Case.Account.FirstName_Native_1__c}</apex:outputlabel>
@@ -234,16 +235,23 @@
              </td>
              <td class="TdLabel" align="left" width="20%" style="border-top-style: hidden;border-right-style: hidden;">{!$Label.CustomerType}</td>
              <td align="left" width="30%" style="border-top-style: hidden;border-right-width:3px;"><apex:outputField value="{!Case.Customer_Type__c}"></apex:outputField></td>
-          </tr> 
+          </tr>                    
           <tr>
              <td class="TdLabel" align="left" width="20%" rowspan="2" style="border-top-style: hidden;border-right-style: hidden;border-left-width:3px;">{!$Label.Customer}</td>
              <td align="left" width="30%" rowspan="2" height="25" style="border-top-style: hidden;border-right-style: hidden;">
-                <apex:outputlabel rendered="{!If(Case.Account.RecordType.Name=='Person Account',true,false)}">{!Case.Account.LastName} &nbsp; {!Case.Account.FirstName} {!$Label.Sama}</apex:outputlabel>
-               <apex:outputlabel rendered="{!If(Case.Account.RecordType.Name=='Company',true,false)}">{!Case.Account.Company_Name__c} {!$Label.Sama}</apex:outputlabel>
+               <apex:outputPanel rendered="{!If(usr.Market__c =='KR',true,false)}">
+                   <apex:outputlabel rendered="{!If(Case.Account.RecordType.Name=='Person Account',true,false)}">{!Case.Account.LastName} &nbsp; {!Case.Account.FirstName}</apex:outputlabel>
+                   <apex:outputlabel rendered="{!If(Case.Account.RecordType.Name=='Company',true,false)}">{!Case.Account.Company_Name__c}</apex:outputlabel>
+               </apex:outputPanel>
+               <apex:outputPanel rendered="{!If(usr.Market__c !='KR',true,false)}">
+                   <apex:outputlabel rendered="{!If(Case.Account.RecordType.Name=='Person Account',true,false)}">{!Case.Account.LastName} &nbsp; {!Case.Account.FirstName} {!$Label.Sama}</apex:outputlabel>
+                   <apex:outputlabel rendered="{!If(Case.Account.RecordType.Name=='Company',true,false)}">{!Case.Account.Company_Name__c} {!$Label.Sama}</apex:outputlabel>
+               </apex:outputPanel>
+
               </td>
              <td class="TdLabel" align="left" width="20%" style="border-top-style: hidden;border-right-style: hidden;">{!$Label.UCID}</td>
              <td align="left" width="30%" height="25" style="border-top-style: hidden;border-right-width:3px;">{!Case.Account.UCID__c}</td>  
-          </tr> 
+          </tr>          
           <tr>
              <td class="TdLabel" align="left" width="20%" height="25" style="border-top-style: hidden;border-right-style: hidden;">{!$Label.Occupation}</td>
              <td align="left" width="30%" height="25" style="border-top-style: hidden;border-right-width:3px;"><apex:outputField value="{!Case.Account.Occupation__c}"></apex:outputField></td>
