--- a/src/main/metadata/pages/AddressSearchValidation.page
+++ b/src/main/metadata/pages/AddressSearchValidation.page
@@ -134,8 +134,16 @@
                     </apex:pageBlockSectionItem> 
                    
                   <apex:inputField value="{!objPersonAccount.Email__c}" />                    
-                  <apex:inputField value="{!objPersonAccount.PersonBirthdate}"/> 
-                  <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>
+                  <apex:inputField value="{!objPersonAccount.PersonBirthdate}"/>
+                  
+                  <apex:pageBlockSectionItem rendered="{!IF(market == 'KR', true, false)}">                     
+                      <apex:inputField value="{!objPersonAccount.MBK_Data_Source__c}"/>           
+                  </apex:pageBlockSectionItem>
+                  <apex:pageBlockSectionItem rendered="{!IF(market != 'KR', true, false)}">                     
+                      <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>           
+                  </apex:pageBlockSectionItem>  
+                  <!--
+                  <apex:inputField value="{!objPersonAccount.Data_Source__c}"/> -->
                </apex:pageBlockSection>
                
         <!--  KOREA MARKET Person Account - End -->
@@ -183,8 +191,14 @@
                         </apex:outputPanel>                  
                     </apex:pageBlockSectionItem>                  
                                   
-                   <apex:inputField value="{!objAccount.Email__c}" />           
-                   <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>
+                   <apex:inputField value="{!objAccount.Email__c}" />   
+                   <apex:pageBlockSectionItem rendered="{!IF(market == 'KR', true, false)}">                     
+                      <apex:inputField value="{!objPersonAccount.MBK_Data_Source__c}"/>           
+                  </apex:pageBlockSectionItem>
+                  <apex:pageBlockSectionItem rendered="{!IF(market != 'KR', true, false)}">                     
+                      <apex:inputField value="{!objPersonAccount.Data_Source__c}"/>           
+                  </apex:pageBlockSectionItem>        
+                  <!-- <apex:inputField value="{!objPersonAccount.Data_Source__c}"/> -->
                    <apex:inputField value="{!objAccount.Fax}" /> 
                 </apex:pageBlockSection>       
                 
@@ -203,15 +217,20 @@
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.ZipCode__c.Label}"/>
                         <apex:inputField value="{!AddressObj.ZipCode__c}"/>
                     </apex:pageBlockSectionItem>
-                   
+                    
+                    <apex:pageBlockSectionItem >
+                        <apex:outputLabel value="{!$ObjectType.Address__c.fields.Province__c.Label}"/>
+                        <apex:inputField value="{!AddressObj.Province__c}" style="width:35%; white-space:none;"/>
+                    </apex:pageBlockSectionItem>
+                    <!--
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Province__c.Label}"/>
                             <apex:selectList value="{!provincepicklist}" multiselect="false" size="1" style="width:35%; white-space:none;">
                                 <apex:selectOptions value="{!ProvinceOptions}"/>
                             </apex:selectList>
-                        <!-- <apex:inputField value="{!AddressObj.Province__c}" style="width:35%; white-space:none;"/> -->
+                        
                     </apex:pageBlockSectionItem>            
-                    
+                    -->
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.City__c.Label}"/>
                         <apex:inputField value="{!AddressObj.City__c}"/>
