--- a/src/main/metadata/pages/AddressDisplayInlineEdit.page
+++ b/src/main/metadata/pages/AddressDisplayInlineEdit.page
@@ -51,6 +51,11 @@
                         </apex:outputField>
                     </apex:column>
                     
+                    <apex:column headerValue="{!$ObjectType.Address__c.fields.Preferred__c.Label}" >
+                        <apex:outputField value="{!row.Preferred__c}" style="width:10%; white-space:none;">
+                        </apex:outputField>
+                    </apex:column>
+                    
                     <apex:column headerValue="{!$ObjectType.Address__c.fields.City__c.Label}">
                         <apex:outputText value="{!row.City__c}" style="width:10%; white-space:nowrap;" >
                         </apex:outputText>
